# devenv

./: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  404.html  CHANGELOG.md  CLAUDE.md  README.md  cookiecutter.json  index.html  justfile  mkdocs.yml  pyproject.toml  sitemap.xml
.claude/: settings.json  (+1 more)
app/: main.py  (+2 more)
{{cookiecutter.project_slug}}/: .gitignore  .gitmodules  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  justfile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_slug}}/.claude/: settings.json  settings.local.json
{{cookiecutter.project_slug}}/.claude/agents/: frontend-typescript-dev.md  python-backend-expert-configuration-logging.md  python-backend-expert-enhanced.md  synthetic-data-specialist-output-format.md.md  synthetic-data-specialist.md
{{cookiecutter.project_slug}}/.claude/reference/python/: package-layout-and-architecture.md
{{cookiecutter.project_slug}}/.devcontainer/: Dockerfile  compose-mcp.yml  compose.yml  devcontainer.json  startup.sh
{{cookiecutter.project_slug}}/.devcontainer/mcp/context7/: README.md
{{cookiecutter.project_slug}}/.serena/memories/: mcp_tool_usage_guide.md
{{cookiecutter.project_slug}}/app/: Dockerfile  compose.yml  main.py  requirements.txt
{{cookiecutter.project_slug}}/docs/: changelog.md  index.md
{{cookiecutter.project_slug}}/docs/api/: cli.md  rest.md
{{cookiecutter.project_slug}}/docs/architecture/: adapters.md  background-tasks.md  cache-graph.md  domain.md  overview.md  services.md
{{cookiecutter.project_slug}}/docs/development/: beacon.md  contributing.md  testing.md
{{cookiecutter.project_slug}}/docs/getting-started/: configuration.md  installation.md  quickstart.md
{{cookiecutter.project_slug}}/docs/includes/: abbreviations.md
{{cookiecutter.project_slug}}/docs/reference/: adapters.md  api.md  domain.md  index.md  infrastructure.md  services.md
{{cookiecutter.project_slug}}/migrations/: README.md  env.py  script.py.mako
{{cookiecutter.project_slug}}/migrations/versions/: .gitkeep
{{cookiecutter.project_slug}}/project-management/ADRs/: ADR-000-template.md
{{cookiecutter.project_slug}}/project-management/Background/: 00-problem-statement.md  01-final-architecture-document.md
{{cookiecutter.project_slug}}/project-management/Roadmap/: README.md
{{cookiecutter.project_slug}}/project-management/Work/: README.md
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/: __init__.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/adapters/: __init__.py  models.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/api/: __init__.py  main.py  schemas.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/cli/: __init__.py  main.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/domain/: __init__.py  entities.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/infrastructure/: __init__.py  cache.py  config.py  database.py  graph.py  tasks.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug|replace('-', '_')}}/services/: __init__.py
{{cookiecutter.project_slug}}/tests/: __init__.py  conftest.py
{{cookiecutter.project_slug}}/tests/integration/: test_api.py
{{cookiecutter.project_slug}}/tests/unit/domain/: test_entities.py
{{cookiecutter.project_slug}}/tests/unit/services/: test_example_service.py  test_user_service.py
(+74 files in other folders)
