[project]
name = "{{ cookiecutter.project_slug }}"
dynamic = ["version"]
description = "{{ cookiecutter.project_description }}"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.author_email }}" }
]
requires-python = ">={{ cookiecutter.python_version }}"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: {{ cookiecutter.python_version }}",
]
dependencies = [
    # Core framework
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",

    # API framework
    "fastapi>={{ cookiecutter.fastapi_version }}",
    "uvicorn[standard]>={{ cookiecutter.uvicorn_version }}",

    # CLI framework
    "typer>=0.12.0",
    "rich>=13.0.0",

    # Logging
    "structlog>=24.4.0",
{% if cookiecutter.database_backend in ['sqlite', 'postgresql'] %}

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
{% endif %}
{% if cookiecutter.database_backend == 'sqlite' %}
    "aiosqlite>=0.19.0",
{% endif %}
{% if cookiecutter.database_backend == 'postgresql' %}
    "asyncpg>=0.29.0",
{% endif %}
]

[project.optional-dependencies]
dev = [
    # Testing
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",  # For testing FastAPI

    # Type checking
    "mypy>=1.11.0",

    # Linting and formatting
    "ruff>=0.6.0",

    # Security
    "bandit>=1.7.0",
]

docs = [
    "mkdocs>=1.6.0",
    "mkdocstrings[python]>=0.25.0",
    "mkdocs-material>=9.5.0",
]

[project.scripts]
{{ cookiecutter.project_slug|replace('-', '_') }} = "{{ cookiecutter.project_slug|replace('-', '_') }}.cli.main:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.1.0.dev0"

[tool.hatch.version.raw-options]
# Configure setuptools-scm (used internally by hatch-vcs)
# Disable local versions to avoid PyPI/TestPyPI rejection of +g hash suffixes
local_scheme = "no-local-version"

[tool.hatch.build.hooks.vcs]
version-file = "src/{{ cookiecutter.project_slug|replace('-', '_') }}/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.project_slug|replace('-', '_') }}"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]

[tool.mypy]
python_version = "{{ cookiecutter.python_version }}"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[tool.ruff]
target-version = "py{{ cookiecutter.python_version|replace('.', '') }}"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["{{ cookiecutter.project_slug|replace('-', '_') }}"]

[tool.bandit]
exclude_dirs = ["tests"]
skips = ["B101"]  # Allow assert in tests

[tool.coverage.run]
source = ["src"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
